--- a/www.filebot.net/base.css
+++ b/www.filebot.net/base.css
@@ -530,11 +530,28 @@ div.screencast:hover .play {
 #purchase > a.paddle_button {
 	position: relative;
 	display: block;
-	margin: 30px 260px 50px 80px;
-	padding: 15px;
+	margin: 30px 250px 60px 80px;
+	padding: 17px 24px 17px 48px;
 	font-size: larger;
 	vertical-align: middle;
-	text-align: center;
+	text-align: left;
+	text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+}
+
+#purchase > a.paddle_button:before {
+	font-family: FontAwesome;
+	content:"\f07a";
+
+	position: absolute;
+	padding: 3px;
+	left: 0px;
+	opacity: 0.0;
+	transition: all 100ms ease;
+}
+
+#purchase > a.paddle_button:hover:before {
+	left: 10px;
+	opacity: 1.0;
 }
 
 #purchase > a.paddle_button div.tag {
