Add Paddle Terms of Service snippet

--- a/www.filebot.net/base.css
+++ b/www.filebot.net/base.css
@@ -572,6 +572,11 @@ div.screencast:hover .play {
 	background-color: #F14E4E;
 }
 
+#purchase p.paddle {
+	font-family: Verdana, Helvetica, Arial, sans-serif;
+	font-size: 9pt;
+	margin: 30px 20px;
+}
 
 
 /**
