Complete binding reference

--- a/www.filebot.net/code.css
+++ b/www.filebot.net/code.css
@@ -96,3 +96,7 @@ table.binding td:last-child {
 	font-size: smaller;
 	vertical-align: baseline;
 }
+
+table.binding tr:hover {
+	background-color: GhostWhite;
+}
