Fix === icon scale

--- a/www.filebot.net/base.css
+++ b/www.filebot.net/base.css
@@ -242,9 +242,8 @@ div.screencast:hover .play {
 }
 
 .section.tutorial li img {
-	vertical-align: bottom;
-	height: 17px;
-	
+	vertical-align: top;
+	height: 15px;
 }
 
 .section.first {
