--- a/www.filebot.net/code.css
+++ b/www.filebot.net/code.css
@@ -1,6 +1,6 @@
 code {
 	display: block;
-	font-family: monospace;
+	font-family: Andale Mono, monospace;
 	line-height: 1.2em;
 	background-color: #f5f5f5;
 	border: thin dashed #a2a2a2;
@@ -12,10 +12,9 @@ pre {
 	margin: 0px;
 }
 
-code .variable, table.binding td:first-child {
+code .variable {
 	color: #7f0055;
 	font-weight: bold;
-	font-family: monospace;
 }
 
 code .method, div.documentation pre .method {
@@ -26,7 +25,6 @@ code .property, div.documentation pre .property {
 	color: #225577;
 	font-size: 11pt;
 	font-weight: bold;
-	font-family: monospace;
 }
 
 code .string, code .numeral, code .regex {
@@ -40,6 +38,7 @@ code .block {
 
 code .cmd {
 	color: #5C7684;
+	font-weight: bold;
 }
 
 code .option {
@@ -50,7 +49,6 @@ code .option {
 code .argument {
 	color: #008800;
 }
-
 
 div.documentation {
 	font-size: 11pt;
@@ -89,13 +87,26 @@ div.documentation .property {
 	color: #225577;
 }
 
+table.binding td:first-child {
+	color: #7f0055;
+	font-family: Andale Mono, monospace;
+	font-weight: bold;
+}
+
 table.binding td:last-child {
 	color: #0066cc;
-	font-family: monospace;
+	font-family: Andale Mono, monospace;
 	font-size: smaller;
 	vertical-align: baseline;
 }
 
 table.binding tr:hover {
 	background-color: GhostWhite;
+}
+
+table.options > * > * > td:first-child {
+	color: #225577;
+	font-family: Andale Mono, monospace;
+	font-weight: bold;
+	font-size: 11pt;
 }
