--- a/www.filebot.net/base.css
+++ b/www.filebot.net/base.css
@@ -176,6 +176,7 @@ h1 .description {
 
 .main-section-screenshot img {
 	box-shadow: 0px 2px 5px #a2a2a2;
+	border-radius: 4px;
 }
 
 .screenshot a {
