Make links relative where possible

--- a/www.filebot.net/index.css
+++ b/www.filebot.net/index.css
@@ -48,7 +48,7 @@ body > h1 {
 	padding: 20px 80px;
 	margin: 20px 40px;
 
-	background: url(https://www.filebot.net/images/filebot.logo.svg);
+	background: url(images/filebot.logo.svg);
 	background-repeat: no-repeat;
 	background-size: 64px 64px;
 	background-position: left center;
