--- a/www.filebot.net/base.css
+++ b/www.filebot.net/base.css
@@ -1,3 +1,8 @@
+@font-face {
+	font-family: 'Dawning of a New Day';
+	src: url('fonts/Dawning_of_a_New_Day.ttf');
+}
+
 body {
 	font-family: arial, dejavu sans, freesans;
 	font-size: 16px;
