--- a/www.filebot.net/thanks.css
+++ b/www.filebot.net/thanks.css
@@ -1,13 +1,36 @@
 div.screenshot.mail  {
-	margin: 10px 0px 0px 40px;
+	margin: 10px 0px 0px 80px;
 }
 
-div.message.box > img {
+div.message.box {
+	background-color: #F5F5F5;
+	border-radius: 4px;
+	box-shadow: 0 2px 5px #A2A2A2;
+	background-image: linear-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0));
+}
+
+div.message.box {
+	margin: 30px 25px;
+	display: block;
+	text-decoration: none !important;
+	padding: 10px;
+	min-height: 44px;
+	max-width: 380px;
+}
+
+div.message.box p {
+	font-size: 11px;
+	line-height: 18px;
+	color: #555555;
+	margin: 0 0 0 48px
+}
+
+div.message.box img {
 	float: left;
 	margin: 0px 5px 50px 0px;
 }
 
-div.section.about > h2 {
+div.section.about h2 {
 	margin-top: 80px;
 	text-align: center;
 }
@@ -16,18 +39,18 @@ div.section.tutorial {
 	margin-top: 70px;
 }
 
-div.section.tutorial > div.screenshot {
+div.section.tutorial div.screenshot {
 	position: relative;
 	float: left;
 	margin: 25px 35px;
 	border-radius: 10px;
 }
 
-div.section.tutorial > div.screenshot > img {
+div.section.tutorial div.screenshot img {
 	border-radius: 10px;
 }
 
-div.section.tutorial > div.screenshot > div.step {
+div.section.tutorial div.screenshot div.step {
 	position: absolute;
 	text-align: center;
 	top: 75px;
