Replace reviews.php with static client-side HTML / JS

--- a/www.filebot.net/base.css
+++ b/www.filebot.net/base.css
@@ -151,6 +151,11 @@ a.box:link {
 	text-decoration: none;
 }
 
+a.box:focus {
+	outline: none;
+	background-color: #FAFAD2;
+}
+
 /* -------------------- MEDIA -------------------- */
 
 
