--- a/www.filebot.net/base.css
+++ b/www.filebot.net/base.css
@@ -317,19 +317,19 @@ div.section.features div.screenshot img.screenshot.dialog {
 /* -------------------- DOCUMENTATION -------------------- */
 
 
-div.main-section-paragraph {
+div.about.column {
 	width: 390px;
 }
 
-div.main-section-screenshot {
+div.screenshot.column {
 	float: right;
-	min-height: 220px;
+	background: none;
 	margin-top: 30px;
 	margin-left: 20px;
 	margin-right: 5px;
 }
 
-div.main-section-screenshot img {
+div.screenshot.column img {
 	box-shadow: 0px 2px 5px #a2a2a2;
 	border-radius: 4px;
 }
