--- a/www.filebot.net/code.css
+++ b/www.filebot.net/code.css
@@ -6,18 +6,18 @@
 code {
 	display: block;
 	font-family: 'SourceCode', monospace;
-	line-height: 1.2em;
+	line-height: 1.3em;
 	padding: 5px;
-	margin: 5px 0px;
+	margin: 5px 10px 5px 0px;
 	background-color: #f5f5f5;
-	border: thin dashed #a2a2a2;
+	border: thin dashed #a2a2a2a2;
 }
 
 kbd {
 	font-family: 'SourceCode', monospace;
 }
 
-kbd.variable {
+kbd.variable, kbd.function {
 	color: #7f0055;
 	font-weight: bold;
 }
@@ -91,12 +91,8 @@ div.documentation code {
 	font-size: larger;
 	padding: 0px;
 	margin: 0px 0px;
-}
-
-div.documentation code {
-	font-size: larger;
-	padding: 0px;
-	margin: 0px 0px;
+	border: none;
+	background: none;
 }
 
 div.documentation p {
