--- a/www.filebot.net/getting-started/index.css
+++ b/www.filebot.net/getting-started/index.css
@@ -4,24 +4,7 @@ body {
 	background: black;
 }
 
-div.galleria {
-	width: 100%;
-	height: 100%;
-	background: #000;
-	position: absolute;
-	top: 0;
-	bottom: 0;
-}
-
-div.galleria-thumbnails {
-	margin: auto;
-}
-
-div.galleria-thumbnails-list div.galleria-image {
-	max-height: 20px;
-}
-
-img.fullscreen {
+#fullscreen {
 	position: absolute;
 	top: 5px;
 	right: 5px;
@@ -30,6 +13,23 @@ img.fullscreen {
 	opacity: 0.3
 }
 
-div.galleria-thumbnails div.galleria-image {
+#galleria {
+	width: 100%;
+	height: 100%;
+	background: #000;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+}
+
+#galleria div.galleria-thumbnails {
+	margin: auto;
+}
+
+#galleria div.galleria-thumbnails-list div.galleria-image {
+	max-height: 20px;
+}
+
+#galleria div.galleria-thumbnails div.galleria-image {
 	padding: 30px 0px;
 }
