--- a/www.filebot.net/purchase.css
+++ b/www.filebot.net/purchase.css
@@ -13,6 +13,7 @@ div.screenshot.column {
 
 	list-style: none;
 	background: url('images/accept.png') left center no-repeat;
+	background-size: 16px 16px;
 
 	padding: 0.1em 1.7em;
 	margin-left: 1.5em;
