--- a/www.filebot.net/purchase.css
+++ b/www.filebot.net/purchase.css
@@ -12,7 +12,7 @@ div.screenshot.column {
 	font-style: italic;
 
 	list-style: none;
-	background: url('images/accept.png') left center no-repeat;
+	background: url('images/accept.webp') left center no-repeat;
 	background-size: 16px 16px;
 
 	padding: 0.1em 1.7em;
